[package]
name = "vegaflow"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.1"
statrs = "0.18.0"
scraper = "0.23.1"
serde_json = "1.0.140"
nalgebra = "0.33.2"
plotters = "0.3.7"
futures = "0.3.31"
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.45.0", features = ["full"] }